# Fast-API

movies_svc/: Dockerfile  docker-compose.yml  pyproject.toml
movies_svc/src/movies_svc/: main.py
