[project]
name = "movies-svc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "programer122223", email = "pratibha.indel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.121.2",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
movies-svc = "movies_svc:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
